--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,5 +5,9 @@
 // Variables
 @import "variables";
 
-// Bootstrap
-@import "~bootstrap-sass/assets/stylesheets/bootstrap";
+
+@import "../../../node_modules/my-vue-tools/src/sass/parts/table";
+
+@import "../../../node_modules/my-vue-tools/src/sass/parts/admin-panel";
+
+
