--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,4 +10,5 @@
 
 @import "../../../node_modules/my-vue-tools/src/sass/parts/admin-panel";
 
+@import "../../../node_modules/my-vue-tools/src/sass/parts/date-picker";
 
